--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+* 0.3.0
+  - Add 'Foldable', and 'Traversable' instances (thanks @jaspervdj)
+
 * 0.2.3 
   - started changelog
   - Make compatible with GHC 7.8 RC1
