--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+* 0.6.1
+  - Add contributions by Oleg Grenrus (@phadej)
+    - Make 'Semigroup' instances available on all `base` versions.
+    - Add 'Semigroup (Pair a b)' instance
+
 * 0.6.0
   - Add contribution by Bas van Dijk (@basvandijk)
     - Add 'Semigroup' instance for base-4.9.0.0
